Added sudo to reshape commands

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,14 +20,14 @@ jobs:
         uses: actions/jekyll-build-pages@v1
       - name: Reshape
         run: |
-          mkdir _site/open-source 
-          mv _site/* _site/open-source
+          sudo mkdir _site/open-source 
+          sudo mv _site/* _site/open-source
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
       - name: Undo Reshape
         run: |
-          mv  _site/open-source/* _site/
-          rm -r _site/open-source
+          sudo mv  _site/open-source/* _site/
+          sudo rm -r _site/open-source
 
 
   deploy:
